hphp/test/vm/objmethod.php.expectf
private function
HipHop Fatal error: Call to private method c::blah from context t in %s on line 5
